--- a/front-end/app/components/ui/user-avatar/UserAvatar.module.scss
+++ b/front-end/app/components/ui/user-avatar/UserAvatar.module.scss
@@ -1,10 +1,10 @@
 .avatar {
 	@apply rounded-full flex items-center justify-center relative;
-	bottom: 2px solid rgba(255, 255, 255, 0.4);
+	border: 2px solid rgba(255, 255, 255, 0.4);
 	width: 57px;
 	height: 57px;
 	&.white {
-		bottom: 2px solid rgba(255, 255, 255, 0.5);
+		border: 2px solid rgba(255, 255, 255, 0.5);
 		.isVerified {
 			@apply text-white;
 		}
